Add ability to update and destroy administrative tags
Connects to #679

These abilities are required by the Argo admin tags UI
