# openapi.yml
@@ -363,6 +363,8 @@ paths:
           description: Created
         '400':
           description: Bad request
+        '404':
+          description: Object not found
       parameters:
         - name: object_id
           in: path
@@ -384,6 +386,107 @@ paths:
                   minItems: 1
                   items:
                     $ref: '#/components/schemas/AdministrativeTag'
+  '/v1/objects/{object_id}/administrative_tags/{id}':
+    delete:
+      tags:
+        - objects
+      summary: Delete an administrative tag for an object
+      description: ''
+      operationId: 'administrative_tags#destroy'
+      responses:
+        '204':
+          description: Deleted
+        '400':
+          description: Bad request
+        '404':
+          description: Object or tag not found
+      parameters:
+        - name: object_id
+          in: path
+          description: ID of object
+          required: true
+          schema:
+            $ref: '#/components/schemas/Druid'
+        - name: id
+          in: path
+          description: ID of tag to remove
+          required: true
+          schema:
+            $ref: '#/components/schemas/AdministrativeTagEscaped'
+    put:
+      tags:
+        - objects
+      summary: Update one administrative tag
+      description: ''
+      operationId: 'administrative_tags#update (PUT)'
+      responses:
+        '204':
+          description: Updated
+        '400':
+          description: Bad request
+        '404':
+          description: Object or tag not found
+      parameters:
+        - name: object_id
+          in: path
+          description: ID of object
+          required: true
+          schema:
+            $ref: '#/components/schemas/Druid'
+        - name: id
+          in: path
+          description: ID of tag to replace
+          required: true
+          schema:
+            $ref: '#/components/schemas/AdministrativeTagEscaped'
+      requestBody:
+        description: A replacement administrative tag
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - administrative_tag
+              properties:
+                administrative_tag:
+                  $ref: '#/components/schemas/AdministrativeTag'
+    patch:
+      tags:
+        - objects
+      summary: Update one administrative tag
+      description: ''
+      operationId: 'administrative_tags#update (PATCH)'
+      responses:
+        '204':
+          description: Updated
+        '400':
+          description: Bad request
+        '404':
+          description: Object or tag not found
+      parameters:
+        - name: object_id
+          in: path
+          description: ID of object
+          required: true
+          schema:
+            $ref: '#/components/schemas/Druid'
+        - name: id
+          in: path
+          description: ID of tag to replace
+          required: true
+          schema:
+            $ref: '#/components/schemas/AdministrativeTagEscaped'
+      requestBody:
+        description: A replacement administrative tag
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - administrative_tag
+              properties:
+                administrative_tag:
+                  $ref: '#/components/schemas/AdministrativeTag'
   '/v1/objects/{id}/refresh_metadata':
     post:
       tags:
@@ -848,6 +951,10 @@ components:
       type: string
       pattern: '^.+( : .+)+$'
       example: 'Foo : Bar : Baz'
+    AdministrativeTagEscaped:
+      type: string
+      pattern: '^.+(\+%3A\+.+)+$'
+      example: 'Foo+%3A+Bar+%3A+Baz'
     Access:
       type: object
       properties:
